--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rjsf/antd": "^2.5.0",
     "@rjsf/core": "^2.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.14.0",
+    "dayjs": "^1.10.4",
     "monaco-editor-webpack-plugin": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
