--- a/front/package.json
+++ b/front/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "redoc-cli": "^0.10.4"
   }
 }
