migrate project back to create-react-app, use typescript, use react version of Monaco editor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "links": {
             "CurrentPage in IRISAPP": "http://${host}:${port}/csp/${namespace}/${classname}"
         }
-    }
+	},
+	"git.ignoreLimitWarning": true
 }
