--- a/front/package.json
+++ b/front/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "iris-front",
+  "name": "front2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@rjsf/antd": "^2.5.0",
-    "@rjsf/core": "^2.5.0",
+    "@monaco-editor/react": "^4.1.1",
+    "@rjsf/antd": "^2.5.1",
+    "@rjsf/core": "^2.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.14.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "antd": "^4.15.0",
     "dayjs": "^1.10.4",
-    "monaco-editor-webpack-plugin": "^3.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-monaco-editor": "^0.43.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,9 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.1.8",
-    "redoc-cli": "^0.10.4"
   }
 }
