--- a/front/package.json
+++ b/front/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"generate": "yarn redoc-cli bundle --output ../docs/redoc-static.html ../docs/openapi.yml &&yarn openapi --useUnionTypes -i ../docs/openapi.yml -o ./src/api"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "openapi-typescript-codegen": "^0.9.3",
+    "redoc-cli": "^0.10.4"
   }
 }
