--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.15.0",
     "dayjs": "^1.10.4",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -28,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"generate": "yarn redoc-cli bundle --output ../docs/redoc-static.html ../docs/openapi.yml &&yarn openapi --useUnionTypes -i ../docs/openapi.yml -o ./src/api"
+    "generate": "yarn redoc-cli bundle --output ../docs/redoc-static.html ../docs/openapi.yml &&yarn openapi --useUnionTypes -i ../docs/openapi.yml -o ./src/api"
   },
   "eslintConfig": {
     "extends": [
